--- a/Paint/Paint.csproj
+++ b/Paint/Paint.csproj
@@ -16,6 +16,21 @@
     </UpgradeBackupLocation>
     <OldToolsVersion>3.5</OldToolsVersion>
     <TargetFrameworkVersion>v2.0</TargetFrameworkVersion>
+    <PublishUrl>publish\</PublishUrl>
+    <Install>true</Install>
+    <InstallFrom>Disk</InstallFrom>
+    <UpdateEnabled>false</UpdateEnabled>
+    <UpdateMode>Foreground</UpdateMode>
+    <UpdateInterval>7</UpdateInterval>
+    <UpdateIntervalUnits>Days</UpdateIntervalUnits>
+    <UpdatePeriodically>false</UpdatePeriodically>
+    <UpdateRequired>false</UpdateRequired>
+    <MapFileExtensions>true</MapFileExtensions>
+    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <UseApplicationTrust>false</UseApplicationTrust>
+    <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -45,30 +60,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PointerTool.cs" />
-    <Compile Include="BrushTool.cs" />
-    <Compile Include="ClipboardTool.cs" />
-    <Compile Include="EllipseTool.cs" />
+    <Compile Include="Tools\PointerTool.cs" />
+    <Compile Include="Tools\BrushTool.cs" />
+    <Compile Include="Tools\ClipboardTool.cs" />
+    <Compile Include="Tools\EllipseTool.cs" />
     <Compile Include="Enumerations.cs" />
-    <Compile Include="FillTool.cs" />
+    <Compile Include="Tools\FillTool.cs" />
     <Compile Include="ImageFile.cs" />
-    <Compile Include="LineTool.cs" />
+    <Compile Include="Tools\LineTool.cs" />
     <Compile Include="NewDialog.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="NewDialog.Designer.cs">
       <DependentUpon>NewDialog.cs</DependentUpon>
     </Compile>
-    <Compile Include="PencilTool.cs" />
-    <Compile Include="RectangleTool.cs" />
-    <Compile Include="RectangleToolBase.cs" />
+    <Compile Include="Tools\PencilTool.cs" />
+    <Compile Include="Tools\RectangleTool.cs" />
+    <Compile Include="Tools\RectangleToolBase.cs" />
     <Compile Include="TextDialog.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="TextDialog.Designer.cs">
       <DependentUpon>TextDialog.cs</DependentUpon>
     </Compile>
-    <Compile Include="TextTool.cs" />
+    <Compile Include="Tools\TextTool.cs" />
     <Compile Include="ToolArgs.cs" />
     <Compile Include="PaintForm.cs">
       <SubType>Form</SubType>
@@ -131,6 +146,13 @@
     </Content>
     <Content Include="ToolBarImages\text.bmp">
     </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <BootstrapperPackage Include="Microsoft.Net.Framework.3.5.SP1">
+      <Visible>False</Visible>
+      <ProductName>.NET Framework 3.5 SP1</ProductName>
+      <Install>true</Install>
+    </BootstrapperPackage>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
