BrushManager added and used by RectangleTool

--- a/Paint/Paint.csproj
+++ b/Paint/Paint.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BrushManager.cs" />
     <Compile Include="MouseManager.cs" />
     <Compile Include="Tools\PointerTool.cs" />
     <Compile Include="Tools\BrushTool.cs" />
@@ -85,7 +86,6 @@
     <Compile Include="TextDialog.Designer.cs">
       <DependentUpon>TextDialog.cs</DependentUpon>
     </Compile>
-    <Compile Include="Tools\ShapeDecorator.cs" />
     <Compile Include="Tools\TextTool.cs" />
     <Compile Include="ToolArgs.cs" />
     <Compile Include="PaintForm.cs">
