--- a/Paint/Paint.csproj
+++ b/Paint/Paint.csproj
@@ -147,7 +147,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\ToolBarController.cs" />
     <Compile Include="FilterDialog.cs" />
+    <Compile Include="Model\Model.cs" />
     <Compile Include="Style.cs" />
     <Compile Include="MouseManager.cs" />
     <Compile Include="ToolBarImages\MenuController.cs" />
@@ -176,6 +178,7 @@
     </Compile>
     <Compile Include="Tools\TextTool.cs" />
     <Compile Include="ToolArgs.cs" />
+    <Compile Include="View\IToolBarView.cs" />
     <Compile Include="View\PaintForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -184,6 +187,10 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="View\ToolBarUserControll.cs" />
+    <Compile Include="View\ToolBarUserControll.Designer.cs">
+      <DependentUpon>ToolBarUserControll.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="NewDialog.resx">
       <SubType>Designer</SubType>
       <DependentUpon>NewDialog.cs</DependentUpon>
@@ -206,9 +213,10 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="View\ToolBarUserControll.resx">
+      <DependentUpon>ToolBarUserControll.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="app.config" />
-    <None Include="ClassDiagram1.cd" />
-    <None Include="ClassDiagram2.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -254,9 +262,7 @@
       <Name>ImageDesaturator</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Controllers\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
